@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,7 +34,7 @@ import java.util.concurrent.ThreadLocalRandom;
  *          necessary barriers. The tests use volatile memory accesses and
  *          blackholes to prevent C2 from simply optimizing them away.
  * @library /test/lib /
- * @requires vm.gc.ZGenerational
+ * @requires vm.gc.Z
  * @run driver compiler.gcbarriers.TestZGCBarrierElision test-correctness
  */
 
@@ -43,7 +43,7 @@ import java.util.concurrent.ThreadLocalRandom;
  * @summary Test that the ZGC barrier elision optimization elides unnecessary
  *          barriers following simple allocation and domination rules.
  * @library /test/lib /
- * @requires vm.gc.ZGenerational & (vm.simpleArch == "x64" | vm.simpleArch == "aarch64")
+ * @requires vm.gc.Z & (vm.simpleArch == "x64" | vm.simpleArch == "aarch64")
  * @run driver compiler.gcbarriers.TestZGCBarrierElision test-effectiveness
  */
 
@@ -99,7 +99,7 @@ public class TestZGCBarrierElision {
         }
         String commonName = Common.class.getName();
         TestFramework test = new TestFramework(testClass);
-        test.addFlags("-XX:+UseZGC", "-XX:+ZGenerational", "-XX:+UnlockExperimentalVMOptions",
+        test.addFlags("-XX:+UseZGC", "-XX:+UnlockExperimentalVMOptions",
                       "-XX:CompileCommand=blackhole," + commonName + "::blackhole",
                       "-XX:CompileCommand=dontinline," + commonName + "::nonInlinedMethod",
                       "-XX:LoopMaxUnroll=0");
@@ -191,7 +191,7 @@ class TestZGCCorrectBarrierElision {
     static void testAllocateThenAtomic(Inner i) {
         Outer o = new Outer();
         Common.blackhole(o);
-        Common.field1VarHandle.getAndSet​(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
     }
 
     @Test
@@ -199,14 +199,14 @@ class TestZGCCorrectBarrierElision {
     @IR(counts = { IRNode.Z_GET_AND_SET_P_WITH_BARRIER_FLAG, Common.REMAINING, "1" }, phase = CompilePhase.FINAL_CODE)
     static void testLoadThenAtomic(Outer o, Inner i) {
         Common.blackhole(o.field1);
-        Common.field1VarHandle.getAndSet​(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
     }
 
     @Test
     @IR(counts = { IRNode.Z_GET_AND_SET_P_WITH_BARRIER_FLAG, Common.REMAINING, "2" }, phase = CompilePhase.FINAL_CODE)
     static void testAtomicThenAtomicAnotherField(Outer o, Inner i) {
-        Common.field1VarHandle.getAndSet​(o, i);
-        Common.field2VarHandle.getAndSet​(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
+        Common.field2VarHandle.getAndSet(o, i);
     }
 
     @Test
@@ -390,14 +390,14 @@ class TestZGCEffectiveBarrierElision {
     @IR(counts = { IRNode.Z_GET_AND_SET_P_WITH_BARRIER_FLAG, Common.ELIDED, "1" }, phase = CompilePhase.FINAL_CODE)
     static void testStoreThenAtomic(Outer o, Inner i) {
         o.field1 = i;
-        Common.field1VarHandle.getAndSet​(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
     }
 
     @Test
     @IR(counts = { IRNode.Z_GET_AND_SET_P_WITH_BARRIER_FLAG, Common.REMAINING, "1" }, phase = CompilePhase.FINAL_CODE)
     @IR(counts = { IRNode.Z_LOAD_P_WITH_BARRIER_FLAG, Common.ELIDED, "1" }, phase = CompilePhase.FINAL_CODE)
     static void testAtomicThenLoad(Outer o, Inner i) {
-        Common.field1VarHandle.getAndSet​(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
         Common.blackhole(o.field1);
     }
 
@@ -405,7 +405,7 @@ class TestZGCEffectiveBarrierElision {
     @IR(counts = { IRNode.Z_GET_AND_SET_P_WITH_BARRIER_FLAG, Common.REMAINING, "1" }, phase = CompilePhase.FINAL_CODE)
     @IR(counts = { IRNode.Z_STORE_P_WITH_BARRIER_FLAG, Common.ELIDED, "1" }, phase = CompilePhase.FINAL_CODE)
     static void testAtomicThenStore(Outer o, Inner i) {
-        Common.field1VarHandle.getAndSet​(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
         o.field1 = i;
     }
 
@@ -413,8 +413,8 @@ class TestZGCEffectiveBarrierElision {
     @IR(counts = { IRNode.Z_GET_AND_SET_P_WITH_BARRIER_FLAG, Common.REMAINING, "1" }, phase = CompilePhase.FINAL_CODE)
     @IR(counts = { IRNode.Z_GET_AND_SET_P_WITH_BARRIER_FLAG, Common.ELIDED, "1" }, phase = CompilePhase.FINAL_CODE)
     static void testAtomicThenAtomic(Outer o, Inner i) {
-        Common.field1VarHandle.getAndSet​(o, i);
-        Common.field1VarHandle.getAndSet​(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
+        Common.field1VarHandle.getAndSet(o, i);
     }
 
     @Test
