@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,8 +26,8 @@ package gc.z;
 /**
  * @test TestZNMT
  * @bug 8310743
- * @requires vm.gc.ZGenerational & vm.debug
- * @summary Test NMT and ZGenerational heap reservation / commits interactions.
+ * @requires vm.gc.Z & vm.debug
+ * @summary Test NMT and ZGC heap reservation / commits interactions.
  * @library / /test/lib
  * @run driver gc.z.TestZNMT
  */
@@ -63,14 +63,11 @@ public class TestZNMT {
     private static void testValue(int zForceDiscontiguousHeapReservations) throws Exception  {
         /**
          *  Xmx is picked so that it is divisible by 'ZForceDiscontiguousHeapReservations * ZGranuleSize'
-         *  Xms is picked so that it is less than '16 * Xmx / ZForceDiscontiguousHeapReservations' as ZGC
-         *   cannot currently handle a discontiguous heap with an initial size larger than the individual
-         *   reservations.
+         *  Xms is picked so that it is less than '16 * Xmx / ZForceDiscontiguousHeapReservations'
          */
         final int XmsInM = Math.min(16 * XmxInM / (zForceDiscontiguousHeapReservations + 1), XmxInM);
         OutputAnalyzer oa = ProcessTools.executeTestJava(
             "-XX:+UseZGC",
-            "-XX:+ZGenerational",
             "-Xms" + XmsInM + "M",
             "-Xmx" + XmxInM + "M",
             "-Xlog:gc,gc+init",
@@ -84,22 +81,14 @@ public class TestZNMT {
                 .errorTo(System.out)
                 .shouldHaveExitValue(0);
         if (zForceDiscontiguousHeapReservations > 1) {
-            oa.shouldContain("Address Space Type: Discontiguous");
+            oa.shouldContain("Reserved Space Type: Discontiguous");
         }
-
-        if (XmsInM < XmxInM) {
-            // There will be reservations which are smaller than the total
-            // memory allocated in TestZNMT.Test.main. This means that some
-            // reservation will be completely committed and print the following
-            // in the NMT statistics.
-            oa.shouldMatch("reserved and committed \\d+ for Java Heap");
-        }
+        // We expect to have a report of this type.
+        oa.shouldMatch("ZGC heap backing file");
+        oa.shouldMatch("allocated \\d+ for Java Heap");
     }
 
     public static void main(String[] args) throws Exception {
-        testValue(0);
-        testValue(1);
-        testValue(2);
         testValue(100);
     }
 }
