@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,13 @@
  * @test
  * @bug 6531597
  * @summary Tests encoding of arrays of primitives
- * @run main/othervm -Djava.security.manager=allow Test6531597
+ * @run main/othervm Test6531597
  * @author Sergey Malenkov
  */
 
 public final class Test6531597 extends AbstractTest {
     public static void main(String[] args) {
-        new Test6531597().test(true);
+        new Test6531597().test();
     }
 
     protected Object getObject() {
