@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 4818598
  * @summary Tests Box value encoding
- * @run main/othervm -Djava.security.manager=allow javax_swing_Box
+ * @run main/othervm javax_swing_Box
  * @author Sergey Malenkov
  */
 
@@ -34,7 +34,7 @@ import javax.swing.BoxLayout;
 
 public final class javax_swing_Box extends AbstractTest<Box> {
     public static void main(String[] args) {
-        new javax_swing_Box().test(true);
+        new javax_swing_Box().test();
     }
 
     protected Box getObject() {
