@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,14 +33,7 @@ import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.MulticastSocket;
 import java.net.SocketException;
-import java.net.SocketPermission;
 import java.nio.channels.DatagramChannel;
-import java.security.AccessControlException;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.ProtectionDomain;
 
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertThrows;
@@ -51,19 +44,16 @@ import static org.testng.Assert.expectThrows;
  * @bug 8240533
  * @summary Check that DatagramSocket, MulticastSocket and DatagramSocketAdaptor
  *          throw expected Exception when connecting to port 0
- * @run testng/othervm -Djava.security.manager=allow ConnectPortZero
+ * @run testng/othervm ConnectPortZero
  */
 
-public class ConnectPortZero{
+public class ConnectPortZero {
     private InetAddress loopbackAddr, wildcardAddr;
     private DatagramSocket datagramSocket, datagramSocketAdaptor;
     private MulticastSocket multicastSocket;
 
     private static final Class<SocketException> SE = SocketException.class;
-    private static final Class<UncheckedIOException> UCIOE =
-            UncheckedIOException.class;
-    private static final Class<AccessControlException> ACE =
-            AccessControlException.class;
+    private static final Class<UncheckedIOException> UCIOE = UncheckedIOException.class;
 
     @BeforeTest
     public void setUp() throws IOException {
@@ -94,34 +84,6 @@ public class ConnectPortZero{
 
         assertThrows(SE, () -> ds
                 .connect(new InetSocketAddress(addr, 0)));
-    }
-
-
-    // Check that 0 port check doesn't override security manager check
-    @Test(dataProvider = "data")
-    public void testConnectWithSecurityManager(DatagramSocket ds,
-                                               InetAddress addr) {
-        Policy defaultPolicy = Policy.getPolicy();
-        try {
-            Policy.setPolicy(new NoSendPolicy());
-            System.setSecurityManager(new SecurityManager());
-
-            assertThrows(ACE, () -> ds.connect(addr, 0));
-            assertThrows(ACE, () ->
-                    ds.connect(new InetSocketAddress(addr, 0)));
-        } finally {
-            System.setSecurityManager(null);
-            Policy.setPolicy(defaultPolicy);
-        }
-    }
-
-    static class NoSendPolicy extends Policy {
-        final PermissionCollection perms = new Permissions();
-        { perms.add(new SocketPermission("*:0", "connect")); }
-
-        public boolean implies(ProtectionDomain domain, Permission perm) {
-            return !perms.implies(perm);
-        }
     }
 
     @AfterTest
