@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -35,7 +35,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
  * @summary Verify that ScriptEngineManager can load BadFactory without throwing NPE
  * @build BadFactory BadFactoryTest
  * @run junit/othervm BadFactoryTest
- * @run junit/othervm -Djava.security.manager=allow BadFactoryTest
  */
 public class BadFactoryTest {
 
