@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,10 @@
 
 /*
  * @test
- * @bug 4938846 8008577
+ * @bug 4938846 8008577 8174269
  * @modules jdk.localedata
  * @summary Test case for en_IE TimeZone info
- * @run main/othervm -Djava.locale.providers=JRE,SPI Bug4938846
+ * @run main Bug4938846
  */
 
 import java.util.Locale;
@@ -35,13 +35,13 @@ import java.util.TimeZone;
 public class Bug4938846 {
 
    public static void main(String[] args) {
-       String zoneInfo = new String();
        Locale tzLocale = Locale.of("en", "IE");
 
-       TimeZone ieTz = TimeZone.getTimeZone("Europe/London");
+       TimeZone ieTz = TimeZone.getTimeZone("Europe/Dublin");
 
-        if (!ieTz.getDisplayName(true, TimeZone.LONG, tzLocale).equals ("Irish Summer Time"))
-             throw new RuntimeException("\nString for IST, en_IE locale should be \"Irish Summer Time\"");
+       // "Standard" because of the negative DST, summer is considered standard for Europe/Dublin
+       if (!ieTz.getDisplayName(true, TimeZone.LONG, tzLocale).equals ("Irish Standard Time"))
+             throw new RuntimeException("\nString for Europe/Dublin, en_IE locale should be \"Irish Standard Time\"");
 
    }
 }
