@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,19 +23,25 @@
 
 /*
  * @test
- * @bug      8250768 8261976 8277300 8282452 8287597 8325325
+ * @bug      8250768 8261976 8277300 8282452 8287597 8325325 8325874 8297879
+ *           8331947 8281533 8343239 8318416 8346109
  * @summary  test generated docs for items declared using preview
- * @library  ../../lib
+ * @library  /tools/lib ../../lib
  * @modules jdk.javadoc/jdk.javadoc.internal.tool
  *          jdk.javadoc/jdk.javadoc.internal.doclets.formats.html.resources:+open
- * @build    javadoc.tester.*
+ * @build    toolbox.ToolBox javadoc.tester.*
  * @run main TestPreview
  */
 
+import java.io.IOException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
+
 import javadoc.tester.JavadocTester;
+import toolbox.ToolBox;
 
 public class TestPreview extends JavadocTester {
+    ToolBox tb = new ToolBox();
 
     public static void main(String... args) throws Exception {
         var tester = new TestPreview();
@@ -57,7 +63,10 @@ public class TestPreview extends JavadocTester {
         checkOutput("m/pkg/TestPreviewDeclarationUse.html", true,
                     "<code><a href=\"TestPreviewDeclaration.html\" title=\"interface in pkg\">TestPreviewDeclaration</a></code>");
         checkOutput("m/pkg/TestPreviewAPIUse.html", true,
-                "<a href=\"" + doc + "java.base/preview/Core.html\" title=\"class or interface in preview\" class=\"external-link\">Core</a><sup><a href=\"" + doc + "java.base/preview/Core.html#preview-preview.Core\" title=\"class or interface in preview\" class=\"external-link\">PREVIEW</a>");
+                "<a href=\"" + doc + "java.base/preview/Core.html\" title=\"class or interface in preview\" class="
+                        + "\"external-link\">Core</a><sup class=\"preview-mark\"><a href=\"" + doc + "java.base/pr"
+                        + "eview/Core.html#preview-preview.Core\" title=\"class or interface in preview\" class=\""
+                        + "external-link\">PREVIEW</a>");
         checkOutput("m/pkg/DocAnnotation.html", true,
                 "<span class=\"modifiers\">public @interface </span><span class=\"element-name type-name-label\">DocAnnotation</span>");
         checkOutput("m/pkg/DocAnnotationUse1.html", true,
@@ -78,10 +87,12 @@ public class TestPreview extends JavadocTester {
 
         checkOutput("preview-list.html", true,
                 """
-                    <ul class="preview-feature-list">
-                    <li><label for="feature-1">
-                    <input type="checkbox" id="feature-1" disabled checked onclick="toggleGlobal(this, '1', 3)">
-                    <span>0: <a href="https://openjdk.org/jeps/0">Test Feature (Preview)</a></span></label></li>
+                    <ul class="preview-feature-list checkboxes">
+                    <li><label for="feature-1"><input type="checkbox" id="feature-1" disabled checked onclick="tog\
+                    gleGlobal(this, '1', 3)"><span>2147483647: <a href="https://openjdk.org/jeps/2147483647">Test \
+                    Feature (Preview)</a></span></label></li>
+                    <li><label for="feature-all"><input type="checkbox" id="feature-all" disabled checked onclick=\
+                    "toggleGlobal(this, 'all', 3)"><span>Toggle all</span></label></li>
                     </ul>
                     <h2 title="Contents">Contents</h2>
                     <ul class="contents-list">
@@ -101,7 +112,9 @@ public class TestPreview extends JavadocTester {
                     <div class="table-header col-first sort-asc" onclick="sortTable(this, 0, 3)">Package</div>
                     <div class="table-header col-second" onclick="sortTable(this, 1, 3)">Preview Feature</div>
                     <div class="table-header col-last">Description</div>
-                    <div class="col-summary-item-name even-row-color package package-tab1"><a href="java.base/preview/package-summary.html">preview</a><sup><a href="java.base/preview/package-summary.html#preview-preview">PREVIEW</a></sup></div>
+                    <div class="col-summary-item-name even-row-color package package-tab1"><a href="java.base/prev\
+                    iew/package-summary.html">preview</a><sup class="preview-mark"><a href="java.base/preview/pack\
+                    age-summary.html#preview-preview">PREVIEW</a></sup></div>
                     <div class="col-second even-row-color package package-tab1">Test Feature</div>
                     <div class="col-last even-row-color package package-tab1">
                     <div class="block">Preview package.</div>
@@ -117,7 +130,9 @@ public class TestPreview extends JavadocTester {
                     <div class="table-header col-first sort-asc" onclick="sortTable(this, 0, 3)">Record Class</div>
                     <div class="table-header col-second" onclick="sortTable(this, 1, 3)">Preview Feature</div>
                     <div class="table-header col-last">Description</div>
-                    <div class="col-summary-item-name even-row-color record-class record-class-tab1"><a href="java.base/preview/CoreRecord.html" title="class in preview">preview.CoreRecord</a><sup><a href="java.base/preview/CoreRecord.html#preview-preview.CoreRecord">PREVIEW</a></sup></div>
+                    <div class="col-summary-item-name even-row-color record-class record-class-tab1"><a href="java\
+                    .base/preview/CoreRecord.html" title="class in preview">preview.CoreRecord</a><sup class="prev\
+                    iew-mark"><a href="java.base/preview/CoreRecord.html#preview-preview.CoreRecord">PREVIEW</a></sup></div>
                     <div class="col-second even-row-color record-class record-class-tab1">Test Feature</div>
                     <div class="col-last even-row-color record-class record-class-tab1"></div>
                     </div>
@@ -132,7 +147,9 @@ public class TestPreview extends JavadocTester {
                     <div class="table-header col-first sort-asc" onclick="sortTable(this, 0, 3)">Method</div>
                     <div class="table-header col-second" onclick="sortTable(this, 1, 3)">Preview Feature</div>
                     <div class="table-header col-last">Description</div>
-                    <div class="col-summary-item-name even-row-color method method-tab1"><a href="java.base/preview/CoreRecordComponent.html#i()">preview.CoreRecordComponent.i()</a><sup><a href="java.base/preview/CoreRecordComponent.html#preview-i()">PREVIEW</a></sup></div>
+                    <div class="col-summary-item-name even-row-color method method-tab1"><a href="java.base/previe\
+                    w/CoreRecordComponent.html#i()">preview.CoreRecordComponent.i()</a><sup class="preview-mark"><\
+                    a href="java.base/preview/CoreRecordComponent.html#preview-i()">PREVIEW</a></sup></div>
                     <div class="col-second even-row-color method method-tab1">Test Feature</div>
                     <div class="col-last even-row-color method method-tab1">
                     <div class="block">Returns the value of the <code>i</code> record component.</div>
@@ -152,7 +169,77 @@ public class TestPreview extends JavadocTester {
                     <li><a href="../module-summary.html">java.base</a></li>
                     <li><a href="package-summary.html">preview</a></li>
                     <li><a href="Core.html" class="current-selection">Core</a></li>
-                    </ol>""");
+                    </ol>""",
+                """
+                    <div class="block">Preview feature. Links: <a href="CoreRecord.html" title="cla\
+                    ss in preview"><code>CoreRecord</code></a><sup class="preview-mark"><a href="Co\
+                    reRecord.html#preview-preview.CoreRecord">PREVIEW</a></sup>, <a href="CoreRecor\
+                    d.html" title="class in preview"><code>core record</code></a><sup class="previe\
+                    w-mark"><a href="CoreRecord.html#preview-preview.CoreRecord">PREVIEW</a></sup>,
+                    <a href="CoreRecord.html" title="class in preview">CoreRecord</a>, <a href="Co\
+                    reRecord.html" title="class in preview">core record</a>.</div>""",
+                """
+                    <li><a href="CoreRecord.html" title="class in preview"><code>CoreRecord</code><\
+                    /a><sup class="preview-mark"><a href="CoreRecord.html#preview-preview.CoreRecor\
+                    d">PREVIEW</a></sup></li>
+                    <li><a href="CoreRecord.html" title="class in preview">core record</a></li>""");
+
+        // 8331947: Support preview features without JEP should not be included in Preview API page
+        checkOutput("preview-list.html", false, "supportMethod");
+    }
+
+    // 8343239 pre-existing permanent API that is later retrofitted
+    // to extend a @PreviewFeature interface should not be flagged as a preview feature
+    @Test
+    public void nonPreviewExtendsPreview(Path base) throws IOException {
+
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src, """
+                package p;
+                import jdk.internal.javac.PreviewFeature;
+
+                /**
+                 * Preview feature
+                 */
+                @PreviewFeature(feature= PreviewFeature.Feature.TEST)
+                public interface CoreInterface {
+                }
+                """, """
+                package p;
+
+                 /**
+                  * Non preview feature
+                  */
+                 public interface NonPreviewExtendsPreview extends CoreInterface {
+                     default int getNumber() {
+                         return 0;
+                     }
+                 }
+                """);
+        javadoc("-d", "out-non-preview-extends-preview",
+                "--add-exports", "java.base/jdk.internal.javac=ALL-UNNAMED",
+                "--source-path",
+                src.toString(),
+                "p");
+        checkExit(Exit.OK);
+        checkOutput("p/NonPreviewExtendsPreview.html", false,
+                """
+                 <code>NonPreviewExtendsPreview</code> relies on preview features of the Java platform:
+                """,
+                """
+                <code>NonPreviewExtendsPreview</code> refers to one or more preview APIs:
+                """);
+        checkOutput("p/CoreInterface.html", true,
+                """
+                <div class="horizontal-scroll">
+                <div class="type-signature"><span class="modifiers">public interface </span><span class="element-name type-name-label">CoreInterface</span></div>
+                <div class="preview-block" id="preview-p.CoreInterface"><span class="preview-label"><code>CoreInterface</code> is a preview API of the Java platform.</span>
+                <div class="preview-comment">Programs can only use <code>CoreInterface</code> when preview features are enabled.</div>
+                <div class="preview-comment">Preview features may be removed in a future release, or upgraded to permanent features of the Java platform.</div>
+                </div>
+                <div class="block">Preview feature</div>
+                </div>
+                """);
     }
 
     @Test
@@ -167,13 +254,19 @@ public class TestPreview extends JavadocTester {
         checkOutput("api2/api/API.html", true,
                     "<p><a href=\"#test()\"><code>test()</code></a></p>",
                     "<p><a href=\"#testNoPreviewInSig()\"><code>testNoPreviewInSig()</code></a></p>",
-                    "title=\"class or interface in java.util\" class=\"external-link\">List</a>&lt;<a href=\"API.html\" title=\"class in api\">API</a><sup><a href=\"#preview-api.API\">PREVIEW</a></sup>&gt;");
+                    "title=\"class or interface in java.util\" class=\"external-link\">List</a>&lt;<a href=\"API.h"
+                            + "tml\" title=\"class in api\">API</a><sup class=\"preview-mark\"><a href=\"#preview-"
+                            + "api.API\">PREVIEW</a></sup>&gt;");
         checkOutput("api2/api/API2.html", true,
-                    "<a href=\"API.html#test()\"><code>API.test()</code></a><sup><a href=\"API.html#preview-api.API\">PREVIEW</a></sup>",
-                    "<a href=\"API.html#testNoPreviewInSig()\"><code>API.testNoPreviewInSig()</code></a><sup><a href=\"API.html#preview-api.API\">PREVIEW</a></sup>",
-                    "<a href=\"API3.html#test()\"><code>API3.test()</code></a><sup><a href=\"API3.html#preview-test()\">PREVIEW</a></sup>");
+                    "<a href=\"API.html#test()\"><code>API.test()</code></a><sup class=\"preview-mark\"><a href=\""
+                            + "API.html#preview-api.API\">PREVIEW</a></sup>",
+                    "<a href=\"API.html#testNoPreviewInSig()\"><code>API.testNoPreviewInSig()</code></a><sup class"
+                            + "=\"preview-mark\"><a href=\"API.html#preview-api.API\">PREVIEW</a></sup>",
+                    "<a href=\"API3.html#test()\"><code>API3.test()</code></a><sup class=\"preview-mark\"><a href="
+                            + "\"API3.html#preview-test()\">PREVIEW</a></sup>");
         checkOutput("api2/api/API3.html", true,
-                    "<div class=\"block\"><a href=\"#test()\"><code>test()</code></a><sup><a href=\"#preview-test()\">PREVIEW</a></sup></div>");
+                    "<div class=\"block\"><a href=\"#test()\"><code>test()</code></a><sup class=\"preview-mark\"><"
+                            + "a href=\"#preview-test()\">PREVIEW</a></sup></div>");
     }
 
     @Test
@@ -188,5 +281,69 @@ public class TestPreview extends JavadocTester {
 
         checkOutput("java.base/preview/NoPreview.html", false,
                     "refers to one or more preview");
+    }
+
+    @Test
+    public void testRequiresTransitiveJavaBase() {
+        Path src = Paths.get(testSrc, "requiresTransitiveJavaBase");
+        javadoc("-d", "out-requires-transitive-java-base",
+                "-XDforcePreview", "--enable-preview", "-source", System.getProperty("java.specification.version"),
+                "--module-source-path", src.toString(),
+                "--module", "m",
+                "--expand-requires", "transitive");
+        checkExit(Exit.OK);
+
+        checkOutput("m/module-summary.html", true,
+                    "Indirect exports from the <code>java.base</code> module are");
+    }
+
+    // Test for JDK hidden option to add an entry for a non-preview element
+    // in the preview page based on the presence of a javadoc tag.
+    @Test
+    public void testPreviewNoteTag(Path base) throws IOException {
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src, """
+                package p;
+                import jdk.internal.javac.PreviewFeature;
+
+                /**
+                 * Preview feature
+                 */
+                @PreviewFeature(feature= PreviewFeature.Feature.TEST)
+                public interface CoreInterface {
+                }
+                """, """
+                package p;
+
+                 /**
+                  * Non preview feature.
+                  * {@previewNote 2147483647 Preview API Note}
+                  */
+                 public interface NonPrevieFeature {
+                 }
+                """);
+        javadoc("-d", "out-preview-note-tag",
+                "--add-exports", "java.base/jdk.internal.javac=ALL-UNNAMED",
+                "-tag", "previewNote:a:Preview Note:",
+                "--preview-note-tag", "previewNote",
+                "--source-path",
+                src.toString(),
+                "p");
+        checkExit(Exit.OK);
+
+        checkOutput("preview-list.html", true,
+                """
+                    <h2 title="Contents">Contents</h2>
+                    <ul class="contents-list">
+                    <li id="contents-preview-api-notes"><a href="#preview-api-notes">Preview API Notes</a></li>
+                    <li id="contents-interface"><a href="#interface">Interfaces</a></li>""",
+                """
+                    <div class="caption"><span>Elements containing Preview Notes</span></div>""",
+                """
+                    <div class="col-summary-item-name even-row-color preview-api-notes preview-api-notes-tab1\
+                    "><a href="p/NonPrevieFeature.html" title="interface in p">p.NonPrevieFeature</a></div>
+                    <div class="col-second even-row-color preview-api-notes preview-api-notes-tab1">Test Feature</div>
+                    <div class="col-last even-row-color preview-api-notes preview-api-notes-tab1">
+                    <div class="block">Non preview feature.</div>""");
     }
 }
