@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -34,8 +32,7 @@ import org.junit.jupiter.api.io.TempDir;
 
 /*
  * @test
- * @enablePreview
- * @bug 8304400
+ * @bug 8304400 8344706
  * @summary Test basic features of javac's source-code launcher
  * @modules jdk.compiler/com.sun.tools.javac.launcher
  * @run junit BasicSourceLauncherTests
@@ -100,11 +97,7 @@ class BasicSourceLauncherTests {
                 }
                 """);
 
-        // Replace with plain Run.of(hi) once implict classes are out of preview
-        System.setProperty("jdk.internal.javac.source", String.valueOf(Runtime.version().feature()));
-        var run = Run.of(hi, List.of("--enable-preview"), List.of());
-        System.clearProperty("jdk.internal.javac.source");
-
+        var run = Run.of(hi, List.of(), List.of());
         assertAll("# " + run,
                 () -> assertLinesMatch(
                         """
